<resources>
    <string name="app_name">MyApp01</string>
    <string name="greeting">Hello My  Friend</string>
    <string name="example">5 + 7 = ?</string>
    <string name="answer">Answer</string>
    <string name="input_the_answer">Input the answer</string>
    <string name="buttonText">Try</string>
    <string name="wrong_answer">Sorry, the answer was wrong.</string>
    <string name="correct_answer">Correct answer.</string>
</resources>